<resources>
    <string name="app_name">Amaze</string>
    <string name="login">Login</string>
    <string name="home_page">Home</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="logout">Logout</string>
    <string name="yourName">TextView</string>
    <string name="text_your_photo">Your Photo</string>
    <string name="text_check_in">Check In</string>
    <string name="text_check_out">Check Out</string>
    <string name="text_time">hh:mm AM/PM</string>
    <string name="text_today_date">Today Date</string>
    <string name="text_date">Date</string>
    <string name="text_dateFormat">DD/MM/YYYY</string>
    <string name="text_welcome_check_in">Welcome to Amaze Advent</string>
    <string name="text_ok_button">OK</string>
    <string name="text_Tripsheet">Contract Trip Sheet</string>
    <string name="text_choose_a_vehicle_type">Pick a Vehicle Type and Location</string>
    <string name="text_Choose_a_Customer">Choose a Customer</string>
    <string name="text_right_arrow">Right Arrow</string>
    <string name="clickopencamera">Click Here to Get a Picture</string>
    <string name="user_text">User</string>
    <string name="Driver_text">Driver</string>
    <string name="place">Place</string>
    <string name="pick_a_customer">Pick a Customer</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="choose_a_date">Pick A Date</string>
    <string name="starting_date">Starting Date</string>
    <string name="closing_date">Closing Date</string>
    <string name="please_enter_kilometer">Enter kilometer</string>
    <string name="please_enter_a_time">Please enter a time</string>
    <string name="starting">Starting</string>
    <string name="closing">Closing</string>
    <string name="total">Total</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="check_in_out">Check In / Out</string>
    <string name="contract_trip_sheet">Contract Trip Sheet</string>
    <string name="click_here_to_notify_user">Click Here To Notify ! User.</string>
    <string name="booking_id">Booking Id</string>
    <string name="date">Closing Date</string>
    <string name="starting_time">Starting Time</string>
    <string name="hh_mm">HH?MM</string>
    <string name="starting_kilometer">Starting KMS</string>
    <string name="history">History</string>
    <string name="km">KM</string>
    <string name="_1234567890">1234567890</string>
    <string name="closing_time">closing time</string>
    <string name="next">NEXT</string>
    <string name="enter_closing_kilometer">Enter Closing KMS</string>
    <string name="enter_starting_kilometer">Start KMS</string>
    <string name="submit">Submit</string>
    <string name="pick_a_vehicle_type">Pick a Vehicle Type :</string>
    <string name="address">Address</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="report_to">Report Person</string>
    <string name="customer_multi_customer_name">customer multi customer name</string>
    <string name="dd_mm_yy">DD?MM?YY</string>
    <string name="no">NO</string>
    <string name="enter_parking_bill_amount">Enter Parking Bill Amount</string>
    <string name="enter_permit_bill_amount">Enter Permit Bill Amount</string>
    <string name="enter_tollgate_bill_amount">Enter Tollgate Bill Amount</string>
    <string name="click_to_take_tripsheet_bill_picture">click to take TripSheet Bill picture</string>
    <string name="click_to_take_parking_bill_picture">click to take Parking Bill picture</string>
    <string name="click_to_take_permit_bill_picture">click to take Permit Bill picture</string>
    <string name="click_to_take_toll_gate_bill_picture">click to take Toll Gate Bill picture</string>
    <string name="customer_name">Customer name</string>
    <string name="amaze_travels">Amaze travels</string>
    <string name="avkumar">avkumar</string>
    <string name="tamil">தமிழ் </string>
    <string name="english">English</string>
    <string name="Vehicle_name">Vehicle Name</string>
    <string name="pick_up_time">Pickup Time</string>
    <string name="Please_enter_valid_Closing_Date">Please Enter Valid Closing Date</string>
    <string name="Starting_date">Starting date</string>

</resources>
