<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Tripclode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripsheetClose">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:id="@+id/notify_user"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/click_here_to_notify_user"
            android:background="@color/cardview_dark_background"
            android:layout_height="@dimen/amaze_logo_space" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:shadowColor="@color/iron"
                android:text="@string/booking_id"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="28dp"
                android:gravity="center"
                android:shadowColor="@color/iron"
                android:text="@string/date"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textview_tripnoClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_tripdateclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="7dp"
                android:gravity="center"
                android:paddingRight="10dp"
                android:shadowColor="@color/iron"
                android:text="@string/dd_mm_yy"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="Customer Name : "
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textview_customerclose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/customer_name"
            android:textColor="@color/iron"
            android:textSize="16sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:shadowColor="@color/iron"
                android:text="@string/starting_time"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startingtime_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="28dp"
                android:ems="5"
                android:gravity="center"
                android:shadowColor="@color/iron"
                android:text="@string/hh_mm"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:shadowColor="@color/iron"
                android:text="@string/starting_kilometer"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startingKM_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="28dp"
                android:ems="5"
                android:gravity="center"
                android:shadowColor="@color/iron"
                android:text="@string/km"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:shadowColor="@color/iron"
                android:text="@string/mobile_no"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="28dp"
                android:gravity="center"
                android:id="@+id/mobileNumberClose"
                android:shadowColor="@color/iron"
                android:text="@string/_1234567890"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="@string/address"
            android:textSize="13sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:paddingLeft="20dp"
            android:id="@+id/customer_addressClose"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="@string/address"
            android:textSize="16sp" />

  <!--      <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="@string/pick_a_vehicle_type"
            android:textSize="13sp" />

        <Spinner
            android:id="@+id/spinnertype_vehicleClose"
            style="@style/spinnerTheme"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp">

        </Spinner>-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/textview_closingKmclose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/iron"
                android:inputType="number"
                android:hint="@string/enter_closing_kilometer"
                android:textSize="16sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/closing_time"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textview_closingtimeHclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hh"
                android:inputType="number"
                android:maxLength="2"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_weight="0"
                android:text=":" />

            <EditText
                android:id="@+id/textview_closingtimeMclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/mm"
                android:inputType="number"
                android:maxLength="2"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:id="@+id/Submitclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/amaze_logo_space"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/next" />


    </LinearLayout>

</ScrollView>