<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrol"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ara.advent.TripsheetStart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:text="Booking Id"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="28dp"
                android:gravity="center"
                android:text="@string/date"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textview_tripno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_tripdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="7dp"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/dd_mm_yy"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="@string/customer_name"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textview_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/customer_name"
            android:textColor="@color/iron"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="Contact Name : "
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textview_customermc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/customer_multi_customer_name"
            android:textColor="@color/iron"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="@string/report_to"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textview_customerREPORT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:text="@string/report_to"
            android:textColor="@color/iron"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:shadowColor="@color/iron"
                android:text="@string/mobile_no"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="28dp"
                android:gravity="center"
                android:id="@+id/mobileNumber"
                android:shadowColor="@color/iron"
                android:text="1234567890"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="@string/address"
            android:textSize="13sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:paddingLeft="20dp"
            android:id="@+id/customer_address"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="@string/address"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/iron"
            android:text="@string/pick_a_vehicle_type"
            android:textSize="13sp" />

        <Spinner
            android:id="@+id/spinnertype_vehicle"
            style="@style/spinnerTheme"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp">

        </Spinner>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/textview_startingKm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_starting_kilometer"
                android:textSize="16sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/starting_time"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textview_startingtimeH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hh"
                android:inputType="number"
                android:maxLength="2"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/st"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_weight="0"
                android:text=":" />

            <EditText
                android:id="@+id/textview_starngtimeM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/mm"
                android:inputType="number"
                android:maxLength="2"
                android:shadowColor="@color/iron"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
