<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_scroll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckInOut">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_welcome_check_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/view2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:id="@+id/input_your_avatar"
                android:layout_width="match_parent"
                android:layout_height="80dp"

                android:layout_centerHorizontal="true"
                android:contentDescription="@string/text_your_photo"
                android:onClick="addPhoto_OnClick"
                android:src="@drawable/camera_icon" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/input_text_your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/yourName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"

            android:layout_marginEnd="38dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:columnCount="2"
            android:rowCount="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_text_your_name"
            app:layout_constraintVertical_bias="0.106"
            android:layout_marginRight="38dp"
            android:layout_marginLeft="18dp">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/text_today_date" />

            <TextView
                android:id="@+id/input_view_date"
                android:layout_column="1"
                android:layout_gravity="right"

                android:layout_row="0"
                android:text="@string/text_today_date" />

            <TextView
                android:layout_column="0"
                android:layout_marginTop="@dimen/grid_horizontal_space"
                android:layout_row="1"
                android:text="@string/place" />

            <TextView
                android:id="@+id/input_view_place"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/grid_horizontal_space"
                android:layout_row="1"
                android:lines="3"
                android:maxLines="4"
                android:text="Place" />

            <TextView
                android:layout_column="0"
                android:layout_marginTop="@dimen/grid_horizontal_space"
                android:layout_row="2"
                android:text="@string/text_check_in" />

            <TextView
                android:id="@+id/input_view_check_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/grid_horizontal_space"
                android:layout_row="2"
                android:elevation="3dp"
                android:shadowColor="@color/iron"
                android:text="@string/text_time" />


            <TextView
                android:layout_column="0"
                android:layout_marginTop="@dimen/grid_horizontal_space"
                android:layout_row="3"
                android:text="@string/text_check_out" />

            <TextView
                android:id="@+id/input_view_check_out"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/grid_horizontal_space"
                android:layout_row="3"
                android:elevation="3dp"
                android:gravity="center"
                android:text="@string/text_time" />

        </GridLayout>

        <Button
            android:id="@+id/btn_check_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/text_check_in"
            android:onClick="btnCheckInOnClick"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <Button
            android:id="@+id/btn_check_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/text_check_out"
            android:onClick="btnCheckOutOnClick"
            app:layout_constraintTop_toBottomOf="@id/btn_check_in"
            app:layout_goneMarginTop="5dp" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>